Changed "Blazor Starter" to my name, Spence Van Tiem

--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,7 +1,11 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>Welcome to my Blazor Web Application</h1>
 
-Welcome to your new app.
+My name is Spence Van Tiem and this is my very first Blazor Web Application. I am currently a junior level software engineer and Florida Gulf Coast University.
+
+    <p>This is a paragraph all about the application I am going to design.</p>
+
+
 
 <SurveyPrompt Title="How is Blazor working for you?" />
