Changed "Welcome to your new app" to an introduction to me/my project

--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -2,7 +2,7 @@
 
 <h1>Welcome to my Blazor Web Application</h1>
 
-My name is Spence Van Tiem and this is my very first Blazor Web Application. I am currently a junior level software engineer and Florida Gulf Coast University.
+My name is Spence Van Tiem and this is my very first Blazor Web Application. I am currently a junior level software engineer at Florida Gulf Coast University.
 
     <p>This is a paragraph all about the application I am going to design.</p>
 
