--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -25,6 +25,16 @@
     </ul>
 </div>
 
+<li class="nav-item px-3">
+
+    <NavLink class="nav-link" href="ipo">
+
+        <span class="oi oi-list-rich" aria-hidden="true"></span> IPO
+
+    </NavLink>
+
+</li>
+
 @code {
     private bool collapseNavMenu = true;
 
