--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -22,18 +22,19 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+
+            <NavLink class="nav-link" href="ipo">
+
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Input Output
+
+            </NavLink>
+
+        </li>
     </ul>
 </div>
 
-<li class="nav-item px-3">
 
-    <NavLink class="nav-link" href="ipo">
-
-        <span class="oi oi-list-rich" aria-hidden="true"></span> IPO
-
-    </NavLink>
-
-</li>
 
 @code {
     private bool collapseNavMenu = true;
