--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">Spence Van Tiem</a>
+    <a class="navbar-brand" href="">Spence Van Tiem </a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -19,7 +19,7 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+                <span class="oi oi-rain" aria-hidden="true"></span> Fetch data
             </NavLink>
         </li>
     </ul>
@@ -29,11 +29,22 @@
 
     <NavLink class="nav-link" href="ipo">
 
-        <span class="oi oi-list-rich" aria-hidden="true"></span> IPO
+        <span class="oi oi-loop" aria-hidden="true"></span> IPO
 
     </NavLink>
 
 </li>
+
+<ul class="nav flex-column">
+
+    ...
+
+    <li class="nav-item px-3">
+        <NavLink class="nav-link" href="todo">
+            <span class="oi oi-pencil" aria-hidden="true"></span> Todo
+        </NavLink>
+    </li>
+</ul>
 
 @code {
     private bool collapseNavMenu = true;
