--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -26,7 +26,7 @@
 
             <NavLink class="nav-link" href="ipo">
 
-                <span class="oi oi-list-rich" aria-hidden="true"></span> IPO
+                <span class="oi oi-loop" aria-hidden="true"></span> IPO
 
             </NavLink>
 
